--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -392,23 +392,25 @@ line-height: 42px;
 }
 .cat_write_btn{
 	width: 120px;
-    height: 40px;
-    margin-top: 25px;
-    margin: 5px 0px 5px 0px;
-    outline: none;
-    border: 1px solid orange;
-    border-radius: 15px 15px 0px 0px;
-    background-color: #ffdfbf;
-    cursor: pointer;
+	height: 40px;
+	margin-top: 25px;
+	margin: 15px 0px 5px 0px;
+	outline: none;
+	border: 1px solid orange;
+	border-radius: 15px 15px 0px 0px;
+	background-color: #ffdfbf;
+	cursor: pointer;
+	float: right;
 }
 .cat_book_btn{
 	width: 120px;
-    height: 40px;
-    margin-top: 25px;
-    margin: 5px 0px 5px 0px;
-    outline: none;
-    border: 1px solid orange;
-    border-radius: 15px 15px 0px 0px;
-    background-color: #ffdfbf;
-    cursor: pointer;
+	height: 40px;
+	margin-top: 25px;
+	margin: 15px 3px 5px 0px;
+	outline: none;
+	border: 1px solid orange;
+	border-radius: 15px 15px 0px 0px;
+	background-color: #ffdfbf;
+	cursor: pointer;
+	float: right;
 }
