썸네일 이미지 미리보기, 자작에디터 보내줌..... 섬머노트 추가

--- a/src/main/webapp/resources/css/write.css
+++ b/src/main/webapp/resources/css/write.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* body */
 body{
+	font-family:'NanumGothic';
 	overflow-x:hidden;
 	animation: fadein 1s;
 	-webkit-animation: fadein 1s;
@@ -88,6 +89,7 @@ h1[Attributes Style] {
 	width:41px;
 	top:50px;
 	left:50%;
+	z-index:5;_
 	transform:translateX(450px);
 	-webkit-transform:translateX(450px);
 	transition: padding 200ms;
@@ -114,6 +116,7 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 }
 /* 상단 타이틀부 배경색 지정 아이콘 색상 변경값 */
 #write_title_coverimage_bg{
+	outline:none;
 	background-position:-2px 0px;
 	display:inline-block;
 	width:25px;
@@ -220,7 +223,8 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	text-indent:-9999px;
 
 }
-#write_cover_file{		
+#write_cover_file{
+	outline:none;
 	background-position:-2px 0px;
 	display:inline-block;
 	width:25px;
@@ -261,12 +265,26 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	
 	background-image:url(../img/writepage_icon/j_bottom.png);	
 }
-
-/* 타이틀부분 배경색 변경부분 */
-#write_title_area_bg{
+/* 타이틀 부분 커버이미지 부분 */
+#write_title_cover_img{
+	display:block;
+	background-size: cover;
+	background-position: 50% 50%;
+	position:absolute;
+	top:0px;
+	left:0px;
 	outline:0px;
 	width:100%;
-	z-index:5;
+	transition: height,opacity,200ms;
+	-webkit-transition: height,opacity,200ms;
+}
+/* 타이틀부분 배경색 변경부분 */
+#write_title_area_bg{
+	position:absolute;
+	top:0px;
+	left:0px;
+	outline:0px;
+	width:100%;
 	transition: height,opacity,200ms;
 	-webkit-transition: height,opacity,200ms;
 }
@@ -303,7 +321,7 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 }
 .write_title_next_btn{
 	position:absolute;
-	width:100%;
+	width:21%;
 	height:420px;
 	left:78.5%;
 	cursor:pointer;
@@ -315,7 +333,7 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	content:"";
 	width:100px;
 	height:100px;
-	left:15%;
+	left:67%;
 	bottom:150px;
 	opacity:0.2;
 	animation: fadein 0.5s;
@@ -343,28 +361,7 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	transition:top 1000ms;
 	-webkit-transition:top 1000ms;
 }
-.write_cont_error{
-	outline:0px;
-	color:#FFF;
-	text-align:center;
-	position:fixed;
-	width:100%;
-	height:61px;
-	top:-100%;
-	left:50%;
-	z-index:10021;
-	background-color:#F57C68;
-	transform:translateX(-50%);
-	-webkit-transform:translateX(-50%);
-	transition:top 1000ms;
-	-webkit-transition:top 1000ms;
-}
-.write_title_error_message{
-	padding-top:21px;
-	display:inline-block;
-	font-size:15px;
-}
-.write_cont_error_message{
+.write_error_message{
 	padding-top:21px;
 	display:inline-block;
 	font-size:15px;
@@ -392,156 +389,6 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 .write_cont_area::selection{
 	background:RGB(245,124,104,0.6);
 }
-.write_cont_p{
-	font-size:11pt;
-	line-height:22pt;
-}
-.write_cont_p.write_cont_text{
-	margin:0px auto;
-}
-.write_cont_area h2{
-	font-size:28pt;
-	line-height:36.5pt;
-}
-.write_cont_area h3{
-	font-size:21pt;
-	line-height:29.5pt;
-}
-.write_cont_area h4{
-	font-size:14pt;
-	line-height:21.5pt;
-}
-.write_cont_align_left{
-	text-align:left;
-}
-.write_cont_align_center{
-	text-align:center;
-}
-.write_cont_align_justify{
-	text-align:justify;
-}
-.write_cont_icon.fixed{
-	position:fixed;
-	display:inline-block;
-	top:160px;
-	left:50%;
-	transform:translateX(450px);
-	-webkit-transform:translateX(450px);
-	transition: padding 200ms;
-	-webkit-transition: padding 200ms;
-}
-.write_cont_icon{
-	position:absolute;
-	width:41px;
-	height:200px;
-	top:570px;
-	left:50%;
-	transform:translateX(450px);
-	-webkit-transform:translateX(450px);
-	transition: padding 200ms;
-	-webkit-transition: padding 200ms;
-}
-.fixActive{
-	position:fixed;
-	top:0px;
-}
-#write_image_file{
-	background-position:0px 0px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-#write_image_file:hover{
-	background-position:24px 0px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-#write_cont_link_icon{
-	background-position:0px -38px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);
-}
-#write_cont_link_icon:hover{
-	background-position:26px -38px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);
-}
-#write_cont_enter_icon{
-	background-position:0px -75px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-#write_cont_enter_icon:hover{
-	background-position:25px -75px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-.write_cont_align_icon_left{
-	background-position:0px -120px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-.write_cont_align_icon_left:hover{
-	background-position:25px -120px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-.write_cont_align_icon_center{
-	background-position:0px -162px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-.write_cont_align_icon_center:hover{
-	background-position:25px -162px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-.write_cont_align_icon_justify{
-	background-position:0px -204px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-.write_cont_align_icon_justify:hover{
-	background-position:25px -204px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-	
-	background-image:url(../img/writepage_icon/btn_side_jamong.png);	
-}
-
 /* 저장 / 취소버튼 fix부분 */
 .write_cont_fix_wrap{
 	position:fixed;
@@ -590,7 +437,6 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	-webkit-animation: fadein 1s;
 }
 .write_save_panel{
-	border:2px dotted #F57C68;
 	text-align:center;
 	width:300px;
 	height:300px;
@@ -603,6 +449,7 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	-webkit-animation: fadein 1s;
 }
 .write_save_panel h3{
+	padding:15px 0px;
 	font-size:17px;
 }
 .write_save_panel td{
@@ -616,7 +463,7 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	width:250px;
 	margin:0px auto;
 	text-align:left;
-	border:2px dotted #FBA621;
+	border:2px solid #FBA621;
 	padding:2px 0px;
 }
 .write_type_choice_panel{
@@ -624,11 +471,11 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	width:250px;
 	margin:20px auto 0px auto;
 	text-align:left;
-	border:2px dotted #FBA621;
+	border:2px solid #FBA621;
 	padding:2px 0px;
 }
 .write_choice_btn_panel{
-	margin:13px auto 0px auto;
+	margin:20px auto 0px auto;
 }
 .write_choice_save_btn{
 	border:1px solid #F57C68;
@@ -658,302 +505,6 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	background-color:#FBA621;
 	color:#FFF;
 }
-/* 에디터 */
-#write_editor_wrap *{
-	box-sizing:content-box;
-}
-#write_editor_wrap{
-	background-color:#FFF;
-	border-width:2px 1px 1px;
-	border-color:#F57C68 #C0C0C0 #C0C0C0;
-	border-style:solid;
-	border-bottom-left-radius:3px;
-	border-bottom-right-radius:3px;
-	position:absolute;
-	height:42px;
-	display:none;
-	white-space:nowrap;
-	animation: fadein 0.5s;
-	-webkit-animation: fadein 0.5s;
-}
-#write_editor_wrap button.write_font_dropdown_btn{
-	margin:0px;
-}
-#write_editor_wrap .write_editor_dropdown{
-	box-sizing:border-box;
-	position:relative;
-	text-align:left;
-}
-#write_editor_wrap .write_font_family.write_editor_dropdown button{
-	box-sizing:border-box;
-	width:118px;
-	height:42px;
-	text-align:left;
-	border-left:0px;
-	padding:8px 16px;
-}
-#write_editor_wrap .write_format_block.write_editor_dropdown button{
-	box-sizing:border-box;
-	width:89px;
-	height:42px;
-	text-align:left;
-	padding:8px 16px;
-}
-#write_editor_wrap button.write_icon_btn{
-	padding:0px;
-	margin:0px;
-	width:42px;
-	height:42px;
-	line-height:1.5px;
-}
-.write_font_dropdown_arrow{
-	position: absolute;
-    width: 10px;
-    margin: 0px;
-    height: 5px;
-    right: 8px;
-    top: 19px;
-    z-index: 2000;
-    background-position: 0px 0px;
-    background-image: url(../img/writepage_icon/editor_arrow.png);
-    transition:transform 200ms;
-    -webkit-transition:transform 200ms;
-}
-.write_arrow_active{
-	-webkit-transform: rotateX(180deg) translateY(2px);
-    transform: rotateX(180deg) translateY(2px);
-}
-.write_before_text{
-	font-style:normal;
-	display:inline-block;
-	overflow:hidden;
-}
-.write_edit_icon_i{
-	margin: 8px 9px 8px 5px;
-	background-image:url(../img/writepage_icon/btn_editor_icon.png);
-}
-.write_editor_dropdown{
-	display:inline-block;
-}
-.write_fgcolor_dropdown_menu{
-	display:none;
-	right:-1px;
-	position:absolute;
-	background-color:#FFFFFF;
-	border:1px solid #C0C0C0;
-}
-.write_bgcolor_dropdown_menu{
-	display:none;
-	bottom:-183px;
-	right:-1px;
-	position:absolute;
-	background-color:#FFFFFF;
-	border:1px solid #C0C0C0;
-}
-.write_color_change_cover{
-	display:none;
-	background-color:#FFFFFF;
-	padding:10px 15.5px;
-	font-size:16px;
-}
-.write_editor_fgchip{
-	margin:2px 0px;
-	display:inline-block;
-	width:24px;
-	height:24px;
-	border-radius:50%;
-	cursor:pointer;
-}
-.write_font_dropdown_menu{
-	display:none;
-	position:absolute;
-	background-color:#FFFFFF;
-	border:1px solid #C0C0C0;
-	margin:0px;
-	padding:10px 0px;
-	left:-1px;
-}
-#write_editor_first ~ .write_font_dropdown_menu li{
-	margin:5px 14px;
-}
-#write_editor_second ~ .write_font_dropdown_menu{
-	left:0px;
-}
-#write_editor_second ~ .write_font_dropdown_menu li{
-	margin:10px 18px;
-}
-.write_font_dropdown_menu li{
-	list-style:none;
-}
-.write_font_dropdown_menu li a{
-	font-size:14px;
-	text-decoration:none;
-	outline:0px;
-	line-height:130%;
-	color:black;
-}
-.write_format_block .write_font_dropdown_menu .write_font_select a:hover{
-	color:#F57D69;
-}
-.write_font_family .write_font_dropdown_menu .write_font_select a{
-	display:inline-block;
-	width:90px;
-	height:20px;
-	overflow:hidden;
-	text-indent:-9999px;	
-		
-	background-image:url(../img/writepage_icon/font_img.png);
-	background-repeat:no-repeat;
-}
-.write_font_btn_before.write_before_text{
-	display:inline-block;
-	width:90px;
-	height:20px;
-	overflow:hidden;
-	text-indent:-9999px;
-		
-	background-image:url(../img/writepage_icon/font_img.png);
-	background-repeat:no-repeat;
-}
-.write_default_font{
-	display:inline-block;
-	width:90px;
-	height:20px;
-	overflow:hidden;
-	text-indent:-9999px;
-		
-	background-image:url(../img/writepage_icon/font_img.png);
-	background-repeat:no-repeat;
-	background-position:-11px -6px;
-}
-/* 폰트 셀렉트부 이미지 */
-.write_Nanum_Gothic{
-	background-position:-11px -6px;
-}
-.write_font_select .write_Nanum_Gothic:hover{
-	background-position:-99px -5px;
-}
-.write_Nanum_Myengjo{
-	background-position:-10px -42px;
-}
-.write_font_select .write_Nanum_Myengjo:hover{
-	background-position:-98px -41px;
-}
-.write_Nanum_BarunGothic{
-	background-position:-10px -77px;
-}
-.write_font_select .write_Nanum_BarunGothic:hover{
-	background-position:-98px -76px;
-}
-.write_Nanum_Handfont{
-	background-position:-11px -116px;
-}
-.write_font_select .write_Nanum_Handfont:hover{
-	background-position:-99px -115px;
-}
-.write_Nanum_SquareRound{
-	background-position:-9px -153px;
-}
-.write_font_select .write_Nanum_SquareRound:hover{
-	background-position:-97px -152px;
-}
-.write_Georgia{
-	background-position:-10px -184px;
-}
-.write_font_select .write_Georgia:hover{
-	background-position:-98px -184px;
-}
-.write_editor_fgchip:hover{
-	background-position:center;
-	background-image:url(../img/writepage_icon/check_w.png);
-	background-repeat:no-repeat;
-}
-.write_color_change_cover span:first-child:hover{
-	background-position:center;
-	background-image:url(../img/writepage_icon/check.png);
-	background-repeat:no-repeat;
-}
-#write_bgcolor_change_cover .write_editor_fgchip{
-	margin:4px 0px;
-}
-.write_color_change_cover hr{
-	clear:both;
-	width:0px;
-	border:0px;
-	display:block;
-	margin:0 !important;
-}
-.write_color_change_cover span:first-child{
-	border:1px solid #C0C0C0;
-	width:23px;
-	height:23px;
-}
-/* 에디터 아이콘설정 */
-.write_edit_bold_btn{
-	background-position:-6px -9px;
-	display:inline-block;
-	width:25px;
-	height:25px;	
-}
-.write_edit_bold_btn:hover{
-	background-position:-37px -9px;
-	display:inline-block;
-	width:25px;
-	height:25px;	
-}
-.write_edit_italic_btn{
-	background-position:-6px -41px;
-	display:inline-block;
-	width:25px;
-	height:25px;	
-}
-.write_edit_italic_btn:hover{
-	background-position:-38px -41px;
-	display:inline-block;
-	width:25px;
-	height:25px;
-}
-.write_edit_under_btn{
-	background-position:-5px -102px;
-	display:inline-block;
-	width:25px;
-	height:25px;	
-}
-.write_edit_under_btn:hover{
-	background-position:-37px -102px;
-	display:inline-block;
-	width:25px;
-	height:25px;	
-}
-.write_edit_stroke_btn{
-	background-position:-6px -70px;
-	display:inline-block;
-	width:25px;
-	height:25px;	
-}
-.write_edit_stroke_btn:hover{
-	background-position:-38px -70px;
-	display:inline-block;
-	width:25px;
-	height:25px;	
-}
-.write_edit_fgcolor_btn{
-	margin:7px 6px;
-	display:inline-block;
-	width:30px;
-	height:30px;	
-	
-	background-image:url(../img/writepage_icon/fgColorBtn.png);
-}
-.write_edit_bgcolor_btn{
-	margin:7px 6px;
-	display:inline-block;
-	width:30px;
-	height:30px;
-	
-	background-image:url(../img/writepage_icon/bgColorBtn.png);
-}
-
 /* 페이드인 애니메이션부 */
 @keyframes fadein{
 	from{ opacity:0; }
