--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -1,101 +1,177 @@
 @charset "UTF-8";
 
-/* admin_index.jsp ui */
-#aLogin_wrap{
-	width:340px; height:160px;
-	border:1px solid pink; box-shadow:20px 20px 20px #ccc;
-	margin-left:auto; margin-right:auto;
-	margin-top:170px; border-radius:25px;
-}
-#aLogin_wrap .aLogin_title{
-	margin:20px 0 0 96px; width:140px; font-size:19px;
-	background:skyblue; border-radius:15px;
-	text-align:center; padding:2px;
-}
-#aLogin_t{
-	margin:20px 0px 0px 10px;
-}
-
-/* admin_main.jsp ui */
-#aMain_wrap{
-	width:860px; height:760px; border:1px solid blue;
-	border-radius:15px; box-shadow:15px 15px 15px #ccc;
-	margin-left:auto; margin-right:auto;
-	margin-top:30px;
-}
-#aMain_header{
-	width:840px; height:160px; border:1px solid red;
-	border-radius:15px; margin:10px 0px 0px 10px;
-}
-#aMain_logo{
-	width:150px; height:140px; border:1px solid skyblue;
-	border-radius:15px; margin:10px 0px 0px 10px;
-	float:left;/*div가 가로폭 전체를 차지하는 블록요소 태그를
-	내용물 크기만큼 차지하는 인라인 요소로 바꿔서 수직정렬이 수평
-	정렬로 바뀐다. */
-}
-#aMain_logo img{
-    width:120px; height:55px;margin:41px 0px 0px 14px;	
-}
-#aMain_menu{
-	width:380px; height:140px; border:1px solid skyblue;
-	border-radius:15px; margin:10px 0px 0px 10px;
-	float:left;
-}
-#aMain_menu ul li{
-    float:left;/*수직정렬을 수평정렬로 바꾼다.*/
-    list-style:none;/*목록앞 점 없앰*/
-    margin:97px 0px 0px 0px;
-    padding:0px 9px;/*상하 안여백은 0픽셀,좌우 안여백은 9픽셀*/	
-}
-#aMain_right{
-	width:264px; height:140px; border:1px solid skyblue;
-	border-radius:15px; margin:10px 0px 0px 10px;
-	float:left;
-}
-#aMain_right .aRight_title{
-    font-size:12px; margin-left:10px;	
-}
-.clear{
-	clear:both; /*위쪽 div가 float속성이 적용되었을때 빈공간이
-	발생하면 아래쪽 div가 위로 올라가서 ui가 깨진다. 이것을 막아
-	준다.결국은 div간 잘못된 css적용을 막아줌 */
-}
-
-#aMain_cont{
-    width:840px; height:500px;
-    border:1px solid red; border-radius:15px;
-    margin:10px 0px 0px 10px;	
-}
-#aMain_cont .aMainCont_title{
-	font-size:16px; margin:230px 0px 0px 320px;
-}
-#aMain_footer{
-	width:840px; height:54px; 
-	border:1px solid red; border-radius:15px;
-	margin:10px 0px 0px 10px;
-}
-#aMain_footer .aMainFooter_title{
-	font-size:14px; margin:20px 0px 0px 210px;
-}
-
-a:link{text-decoration:none;}
+body {margin:0;	padding:0; background-color:bisque;}
+a:link{text-decoration:none; color:gray;}
 a:active{text-decoration:none;}
 a:visited{text-decoration:none;}
 a:hover{text-decoration:underline;}
 
 
+/* admin_login ui */
+
+#aLogin_back {
+	height: -webkit-fill-available;
+	display:flex;
+	background-image:url(../img/background_img/adm_back.jpg);
+	background-repeat:no-repeat;
+	background-size:cover;
+}	
+
+#aLogin_wrap{
+	width:340px; height:160px;
+	margin:auto auto;
+}
+#aLogin_wrap .aLogin_title{
+	margin:20px 0 20px 96px; width:140px; font-size:16px;
+	text-align:center; padding:2px;
+	color:#fff;
+	z-index:10;
+}
+#aLogin_t{
+	margin:10px auto;
+	padding-left:25px;
+	z-index:10;
+}
+#aLogin_t th{
+	color:#fff;
+}
+
+/* admin_main */
+
+#adm_main_wrap {
+	width:900px;
+	height:auto;
+	margin: 0 auto;
+	padding:30px 20px 10px 20px;
+	background-color:#fff;
+	min-height:900px;
+}
+
+#adm_main_header {
+	display:flex;
+	justify-content:center;
+	margin-bottom:30px;
+}
+
+#adm_main_logo {
+	display:inline-block;
+}
+
+#adm_main_logo img {
+	width:210px;
+	height:100px;
+}
+
+#adm_main_welcome {
+	display:flex;
+	justify-content:flex-end;
+}
+
+#adm_main_menu {
+	padding-top:20px;
+	display:inline-block;
+}
+
+#adm_main_menu ul {
+	margin-top:17px;
+}
+
+#adm_main_menu li {
+	list-style:none;
+	display:inline;
+	margin: 5px 8px;
+}
+
+#adm_main_body {
+	margin:50px 30px;
+	min-height:500px;
+}
+
+#adm_main_cont {
+	min-width:700px;
+}
+#adm_main_cont h2{
+	margin-top:0px;
+	font-size:15px;
+	text-align: center;
+}
+
+.adm_table_wrap {
+	display:flex;
+	justify-content:center;
+}
+
+.adm_main_table {
+	font-size:13px;
+	text-align:center;
+
+}
+
+.adm_main_table th{
+	text-align:left;
+	min-width:300px;
+	max-width:300px;
+	border-bottom:dotted 1px gray;
+	padding:5px;
+}
+.adm_main_table td{
+	min-width:120px;
+	max-width:120px;
+	border-bottom:dotted 1px gray;
+	padding:5px;
+	color:gray;
+}
+
+.adm_main_notice {
+	padding: 20px;
+    width: 650px;
+    background-color: aliceblue;
+    margin: 0px auto;
+}
+
+.adm_main_accuse {
+	padding: 20px;
+    width: 650px;
+    background-color: aliceblue;
+    margin: 40px auto;
+}
+
+.adm_main_inquire {
+	padding: 20px;
+    width: 650px;
+    background-color: aliceblue;
+    margin: 0px auto;
+}
+
+#adm_main_footer {
+    border-top: dotted 2px gray;
+    width: 800px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 25px;
+}
+
+.adm_footer_div img {
+	width:210px;
+	height:65px;
+}
+
+.adm_footer_div p {
+	margin:3px 3px;
+	font-size:12px;
+}
 
 
+/* admin_notice (공지사항) */
+#adm_notice_wrap {
+	display:flex;
+	justify-content:center;
+}
 
-
-
-
-
-
-
-
-
+#adm_notice_table {
+	min-width:700px;
+}
 
 
 
