--- a/src/main/webapp/resources/css/joinmembership.css
+++ b/src/main/webapp/resources/css/joinmembership.css
@@ -4,7 +4,74 @@ body{
 	margin: 0;
 	padding: 0;
 
-	}
+}
+#join_membership_category_btn{
+	margin-left: 721px;
+    outline: none;
+    border: 1px solid;
+    background: white;
+    border-radius: 15px;
+    padding: 2px 14px;
+    color: #ff8040;
+}
+/*우측사이드창 - category*/
+#join_membership_head-page-category-frame{
+	width:calc(56.76vw - 100px);
+	min-width:376px;
+	height:300px;
+	margin:10px 20px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+#join_membership_head-page-category-list{
+	list-style: none;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap:wrap;
+	margin:0;
+	padding:0 calc(3.1vw - 23px);
+}
+.join_membership_head-page-category-item{
+	width: calc(7.55vw - 10px);
+	height: calc(7.55vw - 55px);
+	min-width: 50px;
+	min-height: 50px;
+	margin:0 45px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+.join_membership_head-page-category-item a{
+	background-color:#fff;
+	width: calc(7.55vw - 10px);
+	height: calc(7.55vw - 10px);
+	min-width: 67px;
+	min-height: 67px;
+	cursor:pointer;
+	display:inline-block;
+	line-height:calc(7.55vw - 10px);
+	text-decoration: none;
+	text-align: center;
+	color: #3d3d3d;
+	font-size: 13px;
+}
+
+.join_membership_head-page-category-item a:hover{
+	background-color: #f79482;
+}
+
+.join_membership_profile_edit_btn1 {/* 프로필페이지 버튼 설정 */
+	margin-top:30px;
+	margin-left: 280px;
+	outline: none;
+    border: 1px solid;
+    background: white;
+    border-radius: 15px;
+    padding: 2px 14px;
+    color: #b9b9b9;
+}
 #join_membership_main_wrap{
     padding: calc((100vh - 490px) / 2) 0;
     background-image: url(../img/background_img/login_pattern1.png);
@@ -16,17 +83,54 @@ body{
 	height: 490px;
 	margin: 0 auto;
 
-	}
+}
+#join_membership_main_div2{
+	background-color:white;
+	width:810px;
+	height: 490px;
+	margin: 0 auto;
+
+}
+#join_membership_main_div3{
+	background-color:white;
+	width:810px;
+	height: 490px;
+	margin: 0 auto;
+
+}
+
+#join_membership_img_logo{
+	display: inline-block;
+}
 #join_membership_img_logo img{
 	width: 200px;
 	height: 75px;
 	margin-top: 50px;
 	margin-left: 100px;
 }
+#join_membership_sequence_box{
+	display: inline-block;
+	margin-left: 70px;	
+}
+#join_membership_label_box{
+	margin-left: 50px;
+}
+#join_membership_sequence{
+	display: inline-block;
+	list-style: none;
+	margin: 0;	
+}
+#join_membership_sequence li{
+	font-size:12px;
+	margin: 5px;
+    padding: 10px;
+    float: left;
+    border:1px solid orange;
+    border-radius: 10%;
+}
 #join_membership_label{
-	display: block;
-	margin-left: 110px;
-	margin-top: 10px;
+	display: inline-block;
+	vertical-align:top;
 	font-size: 18px;
 	font-weight: 500;
 }
@@ -59,13 +163,6 @@ body{
 	border-top: none;
 }
 
-.join_membership_text:hover{
-	border-bottom: 2px solid orange;
-}
-.join_membership_text:focus{
-	border-bottom: 2px solid orange; 
-}
-
 .join_membership_birth:hover{
 	border-bottom: 2px solid orange;
 }
@@ -90,7 +187,7 @@ body{
 	-moz-appearance:none;
 	appearance:none;
 	width: 75px;
-	height: 35px;
+	height: 34px;
 	padding-left:15px;
 	padding-bottom: 5px;
 	font-size: 20px;
@@ -135,13 +232,13 @@ body{
 .join_membership_email_class{
 	height: 30px;
 	width:100px;
-	font-size: 20px;
+	font-size: 18px;
 	outline: 0;
 	border-left: none;
 	border-right: none;
 	border-top: none;
 	display: inline;
-	padding-left: 10px;
+	padding-left: 20px;
 }
 
 #join_membership_email_color :hover{
@@ -235,6 +332,5 @@ body{
 	margin-top: 10px;
 	margin-bottom: 5px;
 }
-
 
 
