--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -10,6 +10,7 @@
 	margin: 10px;
 	display: inline-block;
 	width: 40%;
+	padding-left: 0;
 }
 
 #book_create_function {
@@ -30,6 +31,18 @@
 	height: 383px;
 }
 
-input[tpye="checkbox"]:checked + #post_list_cont{
-	background-color: #ffff80;
+.post_list_cont{
+	border:1px solid black;
+	margin:5px;
+	padding:5px;
+}
+
+/* input[type="checkbox"]{ */
+/* 	display:none; */
+/* } */
+.ui-state-default{
+	list-style: none;
+}
+.selected{
+	background-color: #ff80ff;
 }
