--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -1,8 +1,15 @@
 @charset "UTF-8";
 
+#book_create_wrap{
+	padding-left: auto;
+	padding-right: auto;
+}
 #book_create_list {
 	border: 1px solid black;
-	min-height: calc(100vh-50px);
+	display:inline-block;
+	width: 940px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 #post_list {
@@ -11,24 +18,28 @@
 	display: inline-block;
 	width: 40%;
 	padding-left: 0;
+	min-height:600px;
+	vertical-align: top;
 }
-
-#book_create_function {
+#book_create_btn{
+	width:14.2%;
 	display: inline-block;
-	width: 15%;
-	text-align: center;
-	vertical-align: middle;
+}
+#book_create_function {
+	position: fixed;
 }
 
 .btn {
-	margin: 10px 50px;
+	margin: 8px;
 }
 
-#book_create_make {
+#create_list {
+	border: 1px solid blue;
+	margin: 10px;
 	display: inline-block;
 	width: 40%;
-	border: 1px solid blue;
-	height: 383px;
+	padding-left: 0;
+	min-height:600px;
 }
 
 .post_list_cont{
@@ -37,9 +48,10 @@
 	padding:5px;
 }
 
-/* input[type="checkbox"]{ */
-/* 	display:none; */
-/* } */
+input[type="checkbox"]{
+	display:none;
+}
+
 .ui-state-default{
 	list-style: none;
 }
