--- a/src/main/webapp/resources/css/new_book.css
+++ b/src/main/webapp/resources/css/new_book.css
@@ -35,88 +35,88 @@
 	background-size: 140px 200px;
 }
 
-.new_book_list_banner .new_book_inner_page .page1{
+.new_book_list_banner .new_book_inner_page .page1 {
 	background-position: -28px -20px;
 }
 
-.new_book_list_banner .new_book_inner_page .page2{
+.new_book_list_banner .new_book_inner_page .page2 {
 	background-position: -28px -54px;
 }
 
-.new_book_list_banner .new_book_inner_page .page3{
+.new_book_list_banner .new_book_inner_page .page3 {
 	background-position: -28px -88px;
 }
 
-.new_book_list_banner .new_book_inner_page .page4{
+.new_book_list_banner .new_book_inner_page .page4 {
 	background-position: -28px -122px;
 }
 
-.new_book_list_banner .new_book_inner_page .page5{
+.new_book_list_banner .new_book_inner_page .page5 {
 	background-position: -28px -156px;
 }
 
-.new_book_list_banner .new_book_inner_page .page1:hover,
-.new_book_list_banner .new_book_inner_page .page1.showing{
+.new_book_list_banner .new_book_inner_page .page1:hover, .new_book_list_banner .new_book_inner_page .page1.showing
+	{
 	background-position: -89px -20px;
 }
 
-.new_book_list_banner .new_book_inner_page .page2:hover,
-.new_book_list_banner .new_book_inner_page .page2.showing{
+.new_book_list_banner .new_book_inner_page .page2:hover, .new_book_list_banner .new_book_inner_page .page2.showing
+	{
 	background-position: -89px -54px;
 }
 
-.new_book_list_banner .new_book_inner_page .page3:hover,
-.new_book_list_banner .new_book_inner_page .page3.showing{
+.new_book_list_banner .new_book_inner_page .page3:hover, .new_book_list_banner .new_book_inner_page .page3.showing
+	{
 	background-position: -89px -88px;
 }
 
-.new_book_list_banner .new_book_inner_page .page4:hover,
-.new_book_list_banner .new_book_inner_page .page4.showing{
+.new_book_list_banner .new_book_inner_page .page4:hover, .new_book_list_banner .new_book_inner_page .page4.showing
+	{
 	background-position: -89px -122px;
 }
 
-.new_book_list_banner .new_book_inner_page .page5:hover,
-.new_book_list_banner .new_book_inner_page .page5.showing{
+.new_book_list_banner .new_book_inner_page .page5:hover, .new_book_list_banner .new_book_inner_page .page5.showing
+	{
 	background-position: -89px -156px;
 }
 
-.new_book_list_banner .item_banner{
+.new_book_list_banner .item_banner {
 	height: 100%;
 	width: 100%;
 	background-repeat: no-repeat;
 	background-position: center;
 	position: absolute;
-	top:0px;
+	top: 0px;
 }
 
-.new_book_list_banner .item_banner a{
-	display:block;
+.new_book_list_banner .item_banner a {
+	display: block;
 	width: 100%;
 	height: 100%;
 }
 
-.new_book_list_banner .item_banner.showing{
+.new_book_list_banner .item_banner.showing {
 	z-index: 10;
 }
 
 /* 상단 배너 내용 */
-.new_book_banner_book{
+.new_book_banner_book {
 	background-color: transparent;
-	width:	660px;
+	width: 660px;
 	height: 340px;
-	bottom:0;
-	margin:60px auto 0;
+	bottom: 0;
+	margin: 60px auto 0;
 }
 
-.new_book_banner_book_info{
+.new_book_banner_book_info {
 	float: left;
-	width:420px;
+	width: 420px;
 	height: 100%;
 }
 
-.new_book_banner_book_info .text_banner_book_title{
-	background-color:rgba(52,52,52,0.3);
-	color:#fff;
+.new_book_banner_book_info .text_banner_book_title {
+	background-color: rgba(52, 52, 52, 0.3);
+	color: #fff;
 	margin: 20px 0 0;
 	display: inline-block;
 	font-size: 13px;
@@ -172,7 +172,7 @@
 	font-weight: 300;
 	line-height: 1.54;
 	color: #fff;
-	margin:0;
+	margin: 0;
 }
 
 .new_book_banner_book_info .text_banner_author
@@ -182,14 +182,15 @@
 	font-weight: 300;
 	line-height: 1.67;
 	color: rgba(255, 255, 255, 0.8);
-	
 }
 
 .new_book_banner_book_image_container {
 	display: table;
 	height: auto;
+	position: relative;
 }
-.new_book_banner_book_image	{
+
+.new_book_banner_book_image {
 	bottom: 0;
 	float: left;
 	position: absolute;
@@ -203,7 +204,7 @@
 	opacity: 0.03;
 }
 
-.new_book_banner_book_image .book_image	{
+.new_book_banner_book_image .book_image {
 	max-width: 240px;
 }
 
@@ -216,7 +217,7 @@
 /* 최신 책 리스트 */
 #gradeItemList_all {
 	list-style: none;
-	padding:0;
+	padding: 0;
 }
 
 .new_book_list_work {
@@ -225,7 +226,7 @@
 	overflow: hidden;
 }
 
-.new_book_list_work .new_book_inner_list_work	{
+.new_book_list_work .new_book_inner_list_work {
 	width: 940px;
 	margin: 0 auto;
 	position: relative;
@@ -236,7 +237,7 @@
 	height: 72px;
 	position: absolute;
 	top: 240px;
-	border:0 none;
+	border: 0 none;
 }
 
 .new_book_list_work .btn_move_slide.prev {
@@ -256,7 +257,7 @@
 	right: 30px;
 	z-index: 100;
 }
-	
+
 .new_book_list_work .btn_move_slide.next.on {
 	background: url(../img/on-next.png) no-repeat;
 	cursor: pointer;
@@ -289,8 +290,8 @@
 	line-height: 1.64;
 	letter-spacing: 0.6px;
 	text-align: left;
-	color:#bfbfbf;
-	margin-top:2px;
+	color: #bfbfbf;
+	margin-top: 2px;
 	display: block;
 }
 
@@ -305,14 +306,14 @@
 	font-size: 12px;
 	letter-spacing: -0.3px;
 	text-align: left;
-	color:#959595;
-	margin-right: 11px;	
+	color: #959595;
+	margin-right: 11px;
 }
 
 .new_book_list_work .new_book_list_page .page_type.visible {
 	border-bottom: 2px solid #959595;
 	display: inline-block;
-	color:#333;
+	color: #333;
 }
 
 .new_book_list_work .slide_work_list {
@@ -328,38 +329,38 @@
 }
 
 .new_book_list_work .new_book_list_item {
-	margin-top:25px;
+	margin-top: 25px;
 }
 
 .new_book_list_work .new_book_list_item .item_work {
 	float: left;
-	cursor:pointer;
+	cursor: pointer;
 	position: relative;
 }
 
 .item_work .img_cover {
 	width: 200px;
 	box-sizing: border-box;
-	border:1px solid #eee;
+	border: 1px solid #eee;
 }
 
 .item_work .title {
 	margin-top: 14px;
-	font-size:16px;
+	font-size: 16px;
 	letter-spacing: -0.4px;
-	color:#333;
-	width:220px;
+	color: #333;
+	width: 220px;
 	overflow: hidden;
 	white-space: nowrap;
-	-ms-text-overflow:ellipsis;
+	-ms-text-overflow: ellipsis;
 	text-overflow: ellipsis;
 }
 
 .item_work .author {
-	font-size:13px;
-	color:#fef1be;
+	font-size: 13px;
+	color: #fef1be;
 	margin-top: 7px;
-	width:220px;
+	width: 220px;
 	overflow: hidden;
 	white-space: nowrap;
 	-ms-text-overflow: ellipsis;
@@ -377,14 +378,14 @@
 }
 
 .item_work .open_marker {
-	display:block;
+	display: block;
 	width: 22px;
 	height: 11px;
 	background: url(../img/select.png) no-repeat;
 	position: absolute;
 	left: 0;
-	bottom:-28px;
-	transition-duration:0.2s;
+	bottom: -28px;
+	transition-duration: 0.2s;
 	opacity: 0;
 }
 
@@ -396,25 +397,12 @@
 	position: relative;
 	font-size: 0;
 }
-	
+
 .item_work .new_book_item_work_cover .border_left {
 	position: absolute;
 	width: 8px;
 	height: 100%;
 	background: #000;
-	top:0;
+	top: 0;
 	opacity: 0.03;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
