--- a/src/main/webapp/resources/css/search_result.css
+++ b/src/main/webapp/resources/css/search_result.css
@@ -34,7 +34,7 @@
 
 .btn.non-select {
 	background-color: #fee2c0;
-	color:#a1a1a1;
+	color: #a1a1a1;
 }
 
 .btn.type_btn {
@@ -80,7 +80,7 @@
 	background-color: #fff;
 	outline: none;
 	cursor: pointer;
-	color:#363636;
+	color: #363636;
 }
 
 .btn:hover {
@@ -210,6 +210,53 @@
 	filter: brightness(50%);
 }
 
+.work_cont_view {
+	position: absolute;
+	display: inline;
+	text-align: center;
+	height: 390px;
+	width: 260px;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+.work_cont_view_top {
+	height: 230px;
+	margin: 0 40px;
+	margin-top: 85px;
+	background: #fff;
+	color: #333;
+}
+
+.work_cont_view_top strong {
+	display: block;
+	margin: 0;
+	padding: 0px 15px;
+	padding-top: 30px;
+	font-size: 23px;
+	height: 140px;
+}
+
+.work_cont_view_top span {
+	display: block;
+	margin: 0;
+	padding: 0px 15px;
+	height: 40px;
+	font-size: 16px;
+	line-height: 40px;
+}
+
+.work_cont_view_bottom {
+	display: block;
+	height: 40px;
+	margin: 0;
+	padding: 0 15px;
+	padding-top: 45px;
+	font-size: 16px;
+	color: #fff;
+	font-weight: bold;
+}
+
 #work_title {
 	position: absolute;
 	top: 35%;
@@ -261,7 +308,7 @@
 	height: auto;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom:130px;
+	margin-bottom: 130px;
 }
 
 #search_result_author_main .author_cont {
