--- a/src/main/webapp/resources/css/m.css
+++ b/src/main/webapp/resources/css/m.css
@@ -16,7 +16,6 @@ body{
 	position:fixed;
 	background-color:#fff;
 	opacity: 0.8;
-	border-bottom: 1px solid #3b3b3b;
 	z-index: 10020;
 }
 
@@ -291,7 +290,7 @@ body{
 	text-decoration: none;
 	text-align: center;
 	color: #3d3d3d;
-	font-size: 13px;
+	font-size: calc(8px + .5vw);
 }
 
 .head-page-category-item a:hover{
@@ -335,6 +334,7 @@ body{
 	border-radius: 50%;
 }
 #head-profile-name-wrap strong{
+	font-family: 'NanumPen','serif';
 	margin-top:10px;
 	margin-bottom:0;
 	text-align: center;
